--- a/src/css/selector.css
+++ b/src/css/selector.css
@@ -19,8 +19,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3ffffff', e
 
 .selector h3 {display:inline-block; float: left; color:#333333; font-size: 0.9em;  border:none; text-decoration:none; }
 .selector div,.selector ul {display:block; overflow:hidden;margin:0 auto; width:100%;}
-.selector li.item {padding:6px 0px; width:96%; margin: 5px 2% 0 2%; display:block; float:left; overflow:hidden;
+.selector li.item {padding:6px 0px; width:96%; margin: 5px 2% 0 2%; display:block; float:left; overflow:hidden;cursor:pointer;
 color:#000; background: rgba(238,238,238,0.85);}
+.selector li.item:hover{background:rgba(250,250,250,1)}
 .selector li.item input {float:right;}
 .selector li.item h4 {font-size:0.85em; color:#000;padding: 0 3px;}
 .selector li.item p {padding: 0 3px; font-size:0.78em; color: #222;}
